[package]
name = "rusty-portfolio-manager"
version = "0.1.0"
authors = ["Javed Nissar <1396351+RestitutorOrbis@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"